Adds a couple working filters and horizontal filter scroll

--- a/app/pages/detailed-view/detailed-view.scss
+++ b/app/pages/detailed-view/detailed-view.scss
@@ -4,9 +4,10 @@
 
 .canvas-container {
 	margin: 0 auto;
+	background-color: #000;
 }
 
 ion-scroll {
   white-space: nowrap;
-  height: 250px;
+  height: 150px;
 }
