--- a/app/components/filter-component/filter-component.html
+++ b/app/components/filter-component/filter-component.html
@@ -5,5 +5,5 @@
   for more info on Angular 2 Components.
 -->
 
-<canvas #canvas class='' (click)="selectFilter(filterName)"></canvas>
+<canvas #canvas class='' on-tap="selectFilter(filterName)"></canvas>
 
