--- a/app/components/filter-component/filter-component.html
+++ b/app/components/filter-component/filter-component.html
@@ -4,4 +4,4 @@
   See https://angular.io/docs/ts/latest/api/core/ComponentMetadata-class.html
   for more info on Angular 2 Components.
 -->
-<canvas #canvas class='' on-tap="selectFilter(filterName)"></canvas>
+<canvas id="filterCanvas" #canvas class='' on-tap="selectFilter(filterName)"></canvas>
