--- a/app/pages/detailed-view/detailed-view.scss
+++ b/app/pages/detailed-view/detailed-view.scss
@@ -4,7 +4,13 @@
 
 .canvas-container {
 	margin: 0 auto;
-	background-color: #000;
+	canvas {
+		border-bottom: #CCCCCC 1px solid;		
+	}
+}
+
+#filterCanvas {	
+	border: #CCCCCC 1px solid;	
 }
 
 ion-scroll {
