Adds filter labels, custom nav buttons and some more styling

--- a/app/components/filter-component/filter-component.html
+++ b/app/components/filter-component/filter-component.html
@@ -4,4 +4,5 @@
   See https://angular.io/docs/ts/latest/api/core/ComponentMetadata-class.html
   for more info on Angular 2 Components.
 -->
+<p>{{filterName}}</p>
 <canvas id="filterCanvas" #canvas class='' on-tap="selectFilter(filterName)"></canvas>
