--- a/app/components/filter-component/filter-component.html
+++ b/app/components/filter-component/filter-component.html
@@ -5,4 +5,4 @@
   for more info on Angular 2 Components.
 -->
 <p>{{filterName}}</p>
-<canvas id="filterCanvas" #canvas class='' on-tap="selectFilter(filterName)"></canvas>
+<canvas id="filterCanvas" #canvas on-tap="selectFilter(filterName)"></canvas>
