--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -8,7 +8,8 @@
 // App Shared Sass variables belong in app.variables.scss.
 
 @import "../pages/home/home";
-@import "../pages/detailed-view/detailed-view";
+@import "../pages/detail/detail";
+@import "../pages/share/share";
 
 ion-content {
 	background-color: color($colors, ionic, base);
