--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -17,10 +17,14 @@ ion-content {
 
 ion-navbar {
 	border-bottom: color($colors, ionic, contrast) 1px solid;
-}
 
-ion-title {
-	font-weight: 500;
+	ion-title {
+		font-weight: 500;
+
+		.toolbar-title {
+			font-size: 2.1rem;
+		}
+	}
 }
 
 .center-vertical {
