--- a/app/pages/detail/detail.scss
+++ b/app/pages/detail/detail.scss
@@ -1,42 +1,45 @@
-ion-navbar {
-	.nextBtn {
-		color: color($colors, ionic, contrast);
+.detail-page {
+	ion-navbar {
+		.nextBtn {
+			color: color($colors, ionic, contrast);
+		}
+
+		.back-button-icon {
+			display: none;
+		}	
 	}
 
-	.back-button-icon {
-		display: none;
-	}	
-}
+	ion-scroll {
+	  white-space: nowrap;
+	  height: 180px;
 
-ion-scroll {
-  white-space: nowrap;
-  height: 180px;
-
-  ::-webkit-scrollbar {
-		display: none;
-	}
-}
-
-.canvas-container {
-	margin: 0 auto;
-
-	canvas {
-		border-bottom: #CCCCCC 1px solid;		
-	}
-}
-
-filter {
-	display: inline-block;
-	margin: 0px 5px;
-
-	p {
-		font-size: 15px;
-		margin-bottom: 7px;
-		font-weight: 500;
-		text-align: center;
+	  ::-webkit-scrollbar {
+			display: none;
+		}
 	}
 
-	canvas {
-		border: #CCCCCC 1px solid;		
-	}	
+	.canvas-container {
+		margin: 0 auto;
+
+		canvas {
+			border-bottom: #CCCCCC 1px solid;		
+		}
+	}
+
+	filter {
+		display: inline-block;
+		margin: 0px 5px;
+
+		p {
+			font-size: 15px;
+			margin-bottom: 7px;
+			font-weight: 500;
+			text-align: center;
+			color: #FFFFFF;
+		}
+
+		canvas {
+			border: #CCCCCC 1px solid;		
+		}	
+	}
 }
