--- a/app/pages/share/share.scss
+++ b/app/pages/share/share.scss
@@ -1,24 +1,16 @@
-ion-card {
-	width: 100%;
-	margin: 12px 0px 15px 0px;
+.share-page {
+	ion-item {
+		font-size: 20px;
 
-	ion-textarea {
-		font-size: 16px;
-		margin: 10px;
-	}
-}
+		ion-label {
+			margin-top: 20px;
+			margin-bottom: 20px;
+		}
 
-ion-item {
-	font-size: 20px;
-
-	ion-label {
-		margin-top: 20px;
-		margin-bottom: 20px;
-	}
-
-	ion-icon {
-		font-size: 36px;
-		color: #AAAAAA;
-		width: 40px
+		ion-icon {
+			font-size: 36px;
+			color: #AAAAAA;
+			width: 40px
+		}
 	}
 }
