--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -10,6 +10,7 @@
 @import "../pages/home/home";
 @import "../pages/detail/detail";
 @import "../pages/share/share";
+@import "../pages/camera/camera";
 
 ion-content {
 	background-color: color($colors, ionic, base);
